# Stephanie_Lam_S23

./: .gitignore.txt  .gitmodules  CMakeLists.txt  S23_Game.sln  unique.txt
Assets/Shaders/: DefaultFragmentShader.glsl  DefaultVertexShader.glsl
CheckMate/: CMakeLists.txt  CheckMate.vcxproj  CheckMate.vcxproj.filters
CheckMate/include/: CheckMate.h
CheckMate/sourcecode/: CheckMateApp.cpp  CheckMateApp.h  CheckMateEvents.cpp  CheckMateEvents.h  CheckMateKeys.h  CheckMateUtil.h  GameWindow.cpp  GameWindow.h  Image.cpp  Image.h  ImplImage.h  ImplRenderer.h  ImplShader.h  Renderer.cpp  Renderer.h  RendererTypes.h  Shader.cpp  Shader.h  Unit.cpp  Unit.h  WindowImplementation.h
CheckMate/sourcecode/GLFWCode/: GLFWimplementation.cpp  GLFWimplementation.h
CheckMate/sourcecode/OpenGLCode/: OpenGLImage.cpp  OpenGLImage.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h
S23_Game/: CMakeLists.txt  S23_Game.vcxproj  main.cpp
glad/: glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
stbi/: stbi.vcxproj
